refactoring of message entity, tests, event after sending mail and enums for status
