# src/Message/SendMessageHandler.php
@@ -4,29 +4,35 @@ declare(strict_types=1);
 namespace App\Message;
 
 use App\Entity\Message;
+use App\Entity\MessageStatusEnum;
+use App\Event\MessageSentEvent;
+use Symfony\Component\EventDispatcher\EventDispatcherInterface;
 use Doctrine\ORM\EntityManagerInterface;
 use Symfony\Component\Messenger\Attribute\AsMessageHandler;
-use Symfony\Component\Uid\Uuid;
 
 #[AsMessageHandler]
 /**
  * TODO: Cover with a test
  */
-class SendMessageHandler
+readonly class SendMessageHandler
 {
-    public function __construct(private EntityManagerInterface $manager)
+    public function __construct(
+        private EntityManagerInterface   $manager,
+        private EventDispatcherInterface $eventDispatcher)
     {
     }
     
     public function __invoke(SendMessage $sendMessage): void
     {
-        $message = new Message();
-        $message->setUuid(Uuid::v6()->toRfc4122());
-        $message->setText($sendMessage->text);
-        $message->setStatus('sent');
-        $message->setCreatedAt(new \DateTime());
+        $message = new Message(
+            $sendMessage->text,
+            MessageStatusEnum::SENT
+        );
 
         $this->manager->persist($message);
         $this->manager->flush();
+
+        $this->eventDispatcher->dispatch(new MessageSentEvent($message), MessageSentEvent::NAME);
+
     }
 }
